Fix Register UI overlap

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+
   background-color: #f0f0f0;
 }
 
@@ -13,6 +13,8 @@
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .register-form h2 {
